--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Меблерія</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+
+    <load src="./partials/header.html" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/Hero-Section.html" />
+
+      <load src="./partials/Furniture-List-Section.html" />
+
+      <load src="./partials/About-Us-Section.html" />
+
+      <load src="./partials/FAQ-Section.html" />
+
+      <load src="./partials/Feedback-Section.html" />
     </main>
 
-    <load src="./partials/footer.html" />
-
+    <load src="./partials/Footer.html" />
+    <load src="./partials/Furniture-Details-Modal.html" />
+    <load src="./partials/Order-Modal.html" />
     <script type="module" src="./main.js"></script>
   </body>
 </html>
