fix file name on load in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
     <load src="./partials/footer.html" />
     <load src="./partials/Furniture-Details-Modal.html" />
-    <load src="./partials/order-modal.html" />
+    <load src="./partials/Order-Modal.html" />
     <script type="module" src="./main.js"></script>
   </body>
 </html>
