--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Меблерія</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
     <load src="./partials/header.html" />
 
     <main>
@@ -28,7 +29,7 @@
       <load src="./partials/Feedback-Section.html" />
     </main>
 
-    <load src="./partials/footer.html"  />
+    <load src="./partials/footer.html" />
     <load src="./partials/Furniture-Details-Modal.html" />
     <load src="./partials/Order-Modal.html" />
     <script type="module" src="./main.js"></script>
