add popular-products section

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
       <load src="./partials/About-Us-Section.html" />
 
+      <load src="./partials/Popular-Products-Section.html" />
+
       <load src="./partials/FAQ-Section.html" />
 
       <load src="./partials/Feedback-Section.html" />
