--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     />
     <title>Меблерія</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/Furniture-Details-Modal.css" />
   </head>
   <body>
     <load src="./partials/header.html" />
