--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="loader hidden" id="global-loader"></div>
+
     <load src="./partials/header.html" />
 
     <main>
